updating model file path

--- a/0. Latest News Classifier/04. Model Training/12. Best Model Selection.ipynb
+++ b/0. Latest News Classifier/04. Model Training/12. Best Model Selection.ipynb
@@ -30,7 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_pickles = \"/home/lnc/0. Latest News Classifier/04. Model Training/Models/\"\n",
+    "import os\n",
+    "cwd = os.getcwd()\n",
+    "parent = os.path.dirname(cwd) # .../Latest-News-Classifier/0. Latest News Classifier\n",
+    "\n",
+    "path_pickles = parent + \"/04. Model Training/Models/\"\n",
     "\n",
     "list_pickles = [\n",
     "    \"df_models_gbc.pickle\",\n",
