--- a/0. Latest News Classifier/04. Model Training/13. Dimensionality Reduction Plots.ipynb
+++ b/0. Latest News Classifier/04. Model Training/13. Dimensionality Reduction Plots.ipynb
@@ -16,7 +16,7 @@
     "We'll use two techniques:\n",
     "\n",
     "* **Principal Component Analysis**: this technique relies on the obtention of the eigenvalues and eigenvectors of the data matrix and tries to provide a minimum number of variables that keep the maximum amount of variance.\n",
-    "* **t-SNE**: the t-distributed Stochastic Neighbour Embedding is a probabilistic technique particularly well suited for the visualization of high-dimensional datasets. It minimizes the divergence between two distributions: a distribution that measures pairwise similarities of the input objects and a distribution that measures pairwise similarities of the corresponding low-dimensional points in the embedding.\n",
+    "* **t-SNE**: the t-distributed Stochastic Neighbour Embedding is a probabilistic technique particularly well suited for the visualization of high-dimensional datasets. It minimizes the divergence between two distributions: a distribution that measures pairwise similarities of the input objects and a distribution that measures pairwise similarities of the corresponding low-dimensional points in the embedding. [Reference](https://scikit-learn.org/stable/modules/manifold.html#t-sne)\n",
     "\n",
     "\n",
     "\n"
@@ -172,7 +172,7 @@
     "        title = \"PCA decomposition\"  # for the plot\n",
     "        \n",
     "    elif (model == 'TSNE'):\n",
-    "        mod = TSNE(n_components=2)\n",
+    "        mod = TSNE(n_components=n_components)\n",
     "        title = \"t-SNE decomposition\" \n",
     "\n",
     "    else:\n",
