Model Interpretation validation

--- a/0. Latest News Classifier/04. Model Training/12. Best Model Selection.ipynb
+++ b/0. Latest News Classifier/04. Model Training/12. Best Model Selection.ipynb
@@ -42,7 +42,8 @@
     "    \"df_models_lrc.pickle\",\n",
     "    \"df_models_mnbc.pickle\",\n",
     "    \"df_models_rfc.pickle\",\n",
-    "    \"df_models_svc.pickle\"\n",
+    "    \"df_models_svc.pickle\",\n",
+    "    \"df_models_xgbc.pickle\"\n",
     "]\n",
     "\n",
     "df_summary = pd.DataFrame()\n",
@@ -102,37 +103,43 @@
        "      <th>0</th>\n",
        "      <td>Gradient Boosting</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.940120</td>\n",
+       "      <td>0.937126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>KNN</td>\n",
-       "      <td>0.959810</td>\n",
-       "      <td>0.928144</td>\n",
+       "      <td>0.959281</td>\n",
+       "      <td>0.922156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Logistic Regression</td>\n",
-       "      <td>0.981491</td>\n",
+       "      <td>0.980962</td>\n",
        "      <td>0.940120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Multinomial Naïve Bayes</td>\n",
-       "      <td>0.953993</td>\n",
-       "      <td>0.934132</td>\n",
+       "      <td>0.952935</td>\n",
+       "      <td>0.922156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Random Forest</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.928144</td>\n",
+       "      <td>0.913174</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>SVM</td>\n",
-       "      <td>0.959281</td>\n",
-       "      <td>0.940120</td>\n",
+       "      <td>0.963511</td>\n",
+       "      <td>0.928144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.934132</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -140,12 +147,13 @@
       ],
       "text/plain": [
        "                     Model  Training Set Accuracy  Test Set Accuracy\n",
-       "0        Gradient Boosting               1.000000           0.940120\n",
-       "1                      KNN               0.959810           0.928144\n",
-       "2      Logistic Regression               0.981491           0.940120\n",
-       "3  Multinomial Naïve Bayes               0.953993           0.934132\n",
-       "4            Random Forest               1.000000           0.928144\n",
-       "5                      SVM               0.959281           0.940120"
+       "0        Gradient Boosting               1.000000           0.937126\n",
+       "1                      KNN               0.959281           0.922156\n",
+       "2      Logistic Regression               0.980962           0.940120\n",
+       "3  Multinomial Naïve Bayes               0.952935           0.922156\n",
+       "4            Random Forest               1.000000           0.913174\n",
+       "5                      SVM               0.963511           0.928144\n",
+       "6                  XGBoost               1.000000           0.934132"
       ]
      },
      "execution_count": 3,
@@ -166,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,40 +205,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Gradient Boosting</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Logistic Regression</td>\n",
+       "      <td>0.980962</td>\n",
        "      <td>0.940120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Logistic Regression</td>\n",
-       "      <td>0.981491</td>\n",
-       "      <td>0.940120</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Gradient Boosting</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.937126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.934132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>SVM</td>\n",
-       "      <td>0.959281</td>\n",
-       "      <td>0.940120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Multinomial Naïve Bayes</td>\n",
-       "      <td>0.953993</td>\n",
-       "      <td>0.934132</td>\n",
+       "      <td>0.963511</td>\n",
+       "      <td>0.928144</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>KNN</td>\n",
-       "      <td>0.959810</td>\n",
-       "      <td>0.928144</td>\n",
+       "      <td>0.959281</td>\n",
+       "      <td>0.922156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Multinomial Naïve Bayes</td>\n",
+       "      <td>0.952935</td>\n",
+       "      <td>0.922156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Random Forest</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.928144</td>\n",
+       "      <td>0.913174</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -238,15 +252,16 @@
       ],
       "text/plain": [
        "                     Model  Training Set Accuracy  Test Set Accuracy\n",
-       "0        Gradient Boosting               1.000000           0.940120\n",
-       "2      Logistic Regression               0.981491           0.940120\n",
-       "5                      SVM               0.959281           0.940120\n",
-       "3  Multinomial Naïve Bayes               0.953993           0.934132\n",
-       "1                      KNN               0.959810           0.928144\n",
-       "4            Random Forest               1.000000           0.928144"
+       "2      Logistic Regression               0.980962           0.940120\n",
+       "0        Gradient Boosting               1.000000           0.937126\n",
+       "6                  XGBoost               1.000000           0.934132\n",
+       "5                      SVM               0.963511           0.928144\n",
+       "1                      KNN               0.959281           0.922156\n",
+       "3  Multinomial Naïve Bayes               0.952935           0.922156\n",
+       "4            Random Forest               1.000000           0.913174"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
