--- a/0. Latest News Classifier/04. Model Training/15. Sample Articles.ipynb
+++ b/0. Latest News Classifier/04. Model Training/15. Sample Articles.ipynb
@@ -53,7 +53,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_models = \"/home/lnc/0. Latest News Classifier/04. Model Training/Models/\"\n",
+    "import os\n",
+    "cwd = os.getcwd()\n",
+    "parent = os.path.dirname(cwd) # .../Latest-News-Classifier/0. Latest News Classifier\n",
+    "\n",
+    "path_models = parent + \"/04. Model Training/Models/\"\n",
     "\n",
     "# SVM\n",
     "path_svm = path_models + 'best_svc.pickle'\n",
@@ -74,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_tfidf = \"/home/lnc/0. Latest News Classifier/03. Feature Engineering/Pickles/tfidf.pickle\"\n",
+    "path_tfidf = parent + \"/03. Feature Engineering/Pickles/tfidf.pickle\"\n",
     "with open(path_tfidf, 'rb') as data:\n",
     "    tfidf = pickle.load(data)"
    ]
@@ -785,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
