--- a/0. Latest News Classifier/04. Model Training/15. Sample Articles.ipynb
+++ b/0. Latest News Classifier/04. Model Training/15. Sample Articles.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
      "output_type": "stream",
      "text": [
       "The predicted category using the SVM model is politics.\n",
-      "The conditional probability is: 93.0140704529824\n"
+      "The conditional probability is: 92.852093953930449\n"
      ]
     }
    ],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
      "output_type": "stream",
      "text": [
       "The predicted category using the SVM model is politics.\n",
-      "The conditional probability is: 99.39302243677335\n"
+      "The conditional probability is: 99.577210248886615\n"
      ]
     }
    ],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
      "output_type": "stream",
      "text": [
       "The predicted category using the SVM model is entertainment.\n",
-      "The conditional probability is: 99.37177250065048\n"
+      "The conditional probability is: 99.238101113659539\n"
      ]
     }
    ],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
      "output_type": "stream",
      "text": [
       "The predicted category using the SVM model is business.\n",
-      "The conditional probability is: 92.90898847170031\n"
+      "The conditional probability is: 91.775612121762308\n"
      ]
     }
    ],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
      "output_type": "stream",
      "text": [
       "The predicted category using the SVM model is tech.\n",
-      "The conditional probability is: 98.0829006495971\n"
+      "The conditional probability is: 98.712188021796408\n"
      ]
     }
    ],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
      "output_type": "stream",
      "text": [
       "The predicted category using the SVM model is sport.\n",
-      "The conditional probability is: 76.60288283262169\n"
+      "The conditional probability is: 67.032646531138866\n"
      ]
     }
    ],
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
      "output_type": "stream",
      "text": [
       "The predicted category using the SVM model is business.\n",
-      "The conditional probability is: 62.971865810590224\n"
+      "The conditional probability is: 65.833901493596372\n"
      ]
     }
    ],
@@ -652,15 +652,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The predicted category using the SVM model is tech.\n",
-      "The conditional probability is: 41.24897915335832\n"
+      "The predicted category using the SVM model is business.\n",
+      "The conditional probability is: 41.146385605624502\n"
      ]
     }
    ],
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
      "output_type": "stream",
      "text": [
       "The predicted category using the SVM model is entertainment.\n",
-      "The conditional probability is: 50.654659390319566\n"
+      "The conditional probability is: 48.487773929157541\n"
      ]
     }
    ],
@@ -755,7 +755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In these cases, the highest probability is much lower, ranging from 40% to 63%."
+    "In these cases, the highest probability is much lower, ranging from 40% to 66%."
    ]
   },
   {
@@ -769,8 +769,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Taking this into account, we will fix the threshold at **65%**. This means that if the class with the highest probability has its probability lower than 65%, the article will be tagged as **Other**."
+    "Taking this into account, we will fix the threshold at **70%**. This means that if the class with the highest probability has its probability lower than 70%, the article will be tagged as **Other**."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
