--- a/0. Latest News Classifier/11. BERT/BBC_News_Classification_with_BERT_on_TF_Hub_fzsea.ipynb
+++ b/0. Latest News Classifier/11. BERT/BBC_News_Classification_with_BERT_on_TF_Hub_fzsea.ipynb
@@ -306,6 +306,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_selection import chi2\n",
+    "import numpy as np\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('wordnet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wordnet_lemmatizer = WordNetLemmatizer()\n",
+    "stop_words = list(stopwords.words('english'))\n",
+    "\n",
+    "def string_normalization(s, lemmatizer=None, stop_words=None):\n",
+    "    \"\"\"\n",
+    "    s: pandas.core.series.Series\n",
+    "    \"\"\"\n",
+    "    sn = s.str.lower()\n",
+    "    sn = sn.str.replace(r'[\\n|\\r]',' ')\n",
+    "    sn = sn.str.replace(r'(?<=\\d)[,](?=\\d)','') # 12,000 ==> 12000\n",
+    "    sn = sn.str.replace(r'(\\d{1,2})([a-z\\-\\*#])', r'\\1 \\2') # 12.0oz ==> 12.0 oz\n",
+    "    sn = sn.str.replace(r'([a-z\\-\\*#])(\\d{1,2})', r'\\1 \\2') # pack12 ==> pack 12\n",
+    "    sn = sn.str.replace(r'[\\?:!;\\|&\\+\\*\\\"\\%,#\\(\\)\\[\\]\\{\\}/\\'\\\"]',' ')\n",
+    "    sn = sn.str.replace(r'(?<![a-z])\\-(?![a-z])',' ')\n",
+    "    sn = sn.str.replace(r\"\\'s\",'')\n",
+    "    if stop_words:\n",
+    "        stop_word_regex = \"\\\\b(\" + \"|\".join(stop_words) + \")\\\\b\"\n",
+    "        sn = sn.str.replace(stop_word_regex, '')\n",
+    "    if lemmatizer:\n",
+    "        sn = sn.apply(lambda s : ' '.join([lemmatizer.lemmatize(word, pos=\"v\") for word in str(s).split()]))\n",
+    "        sn = sn.apply(lambda s : ' '.join([lemmatizer.lemmatize(word) for word in str(s).split()]))\n",
+    "    sn = sn.replace('\\s+', ' ')\n",
+    "    return sn\n",
+    "\n",
+    "string_normalization(raw_data.Content, wordnet_lemmatizer, stop_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "colab": {},
